<resources>
    <string name="app_name">myweatherapp</string>
    <string name="retry">Retry</string>


    <string name="fragment_main">Main Fragment</string>
    <string name="real_feel">Real Feel:</string>
    <string name="humidity">Humidity:</string>
    <string name="pressure">Pressure:</string>
    <string name="temperature_max">Temperature Max:</string>
    <string name="temperature_min">Temperature Min:</string>
    <string name="change_location">change location</string>
    <string name="input_your_desired_location">Input your Desired Location:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>